--- a/package.json
+++ b/package.json
@@ -9,17 +9,26 @@
         "@types/node": "8.10.66",
         "@types/winston": "^2.4.4",
         "@types/xml2js": "^0.4.11",
-        "typescript": "^4.9.4"
+        "@vitejs/plugin-vue": "^4.0.0",
+        "autoprefixer": "^10.4.13",
+        "postcss": "^8.4.21",
+        "tailwindcss": "^3.2.4",
+        "typescript": "^4.9.4",
+        "vite": "^4.0.0",
+        "vue": "^3.2.45",
+        "vue-tsc": "^1.0.11"
     },
     "dependencies": {
         "@types/axios": "^0.14.0",
         "axios": "^1.2.2",
         "express": "^4.18.2",
-        "tftp": "^0.1.2",
         "winston": "^3.8.2",
         "xml2js": "^0.4.23"
     },
     "scripts": {
-        "start": "node dist/index.js"
+        "start": "cd server && node dist/index.js",
+        "dev": "cd server && node dist/index.js",
+        "build": "cd server && tsc && cd ../client && vue-tsc && vite build",
+        "preview": "cd client && vite preview"
     }
 }
