--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@types/axios": "^0.14.0",
         "axios": "^1.2.2",
         "express": "^4.18.2",
+        "node-tftp": "^0.1.6",
         "winston": "^3.8.2",
         "xml2js": "^0.4.23"
     },
